branches/wip/Archive/110f2d85a5554e84bf52152f171a01ab-d49d59d1f82836ad12e907325fe83114/output
main.cpp:4:7: error: ISO C++ forbids zero-size array 'x' [-Wpedantic]
 int x[];
       ^
